--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
   "dependencies": {
     "@react-spring/web": "^10.0.1",
     "@tailwindcss/vite": "^4.1.8",
+    "bun": "^1.2.15",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
-    "express": "^5.1.0",
     "howler": "^2.2.4",
     "i": "^0.3.7",
     "mocha": "^11.5.0",
@@ -32,22 +31,26 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.8",
-    "ts-node": "^10.9.2",
     "vite-express": "^0.21.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/express": "^5.0.3",
     "@types/howler": "^2.2.12",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.15.30",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
-    "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "express": "^5.1.0",
     "globals": "^16.0.0",
+    "install": "^0.13.0",
+    "npm": "^11.4.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
